Add card component

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,6 +2,7 @@
 @import 'base';
 @import 'utility';
 
+@import 'components/card';
 @import 'components/main-grid';
 @import 'components/main-header';
 @import 'components/navigation';
