--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -2,3 +2,16 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.scrollable {
+  overflow: scroll;
+}
+
+.p-20 {
+  padding: 20px;
+}
+
+.gap-20 {
+  display: grid;
+  gap: 20px;
+}
