--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -15,3 +15,19 @@
   display: grid;
   gap: 20px;
 }
+
+.button {
+  display: block;
+  border: transparent;
+  background: var(--primary);
+  color: #efefef;
+  padding: 5px;
+  border-radius: 0.5em;
+}
+
+.tag-list > li {
+  display: inline-block;
+  border: 1px solid;
+  border-radius: 0.5em;
+  padding: 5px;
+}
