--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,8 @@
-@import 'variables';
-@import 'base';
-@import 'utility';
+@import "variables";
+@import "base";
+@import "utility";
 
-@import 'components/card';
-@import 'components/main-grid';
-@import 'components/main-header';
-@import 'components/navigation';
+@import "components/card";
+@import "components/main-grid";
+@import "components/main-header";
+@import "components/navigation";
