Adjust after review

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -2,6 +2,7 @@
   padding: 20px;
   background: #eee;
   box-shadow: 0 6px 12px #0005;
+  position: relative;
 }
 
 .card__container {
@@ -12,15 +13,16 @@
 }
 
 .card__bookmark {
+  background: #ddd;
+  border-radius: 6px;
+  border: 1px solid;
   display: inline-block;
   font-size: 2em;
-  border: 1px solid;
-  background: #ddd;
-  padding: 5px;
-  border-radius: 20%;
-  position: relative;
-  top: -30px;
   left: 250px;
+  padding: 5px;
+  position: absolute;
+  top: -10px;
+  right: 20 px;
 }
 
 .card__bookmark--special {
