--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,3 +6,6 @@
 @import "components/main-grid";
 @import "components/main-header";
 @import "components/navigation";
+@import "components/button";
+@import "components/input";
+@import "components/tag-list";
