--- a/src/scss/components/_main-grid.scss
+++ b/src/scss/components/_main-grid.scss
@@ -1,5 +1,9 @@
 .main-grid {
   display: grid;
   grid-template-rows: 48px auto 48px;
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
